--- a/app/src/main/res/values-v29/themes.xml
+++ b/app/src/main/res/values-v29/themes.xml
@@ -1,5 +1,6 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources xmlns:tools="http://schemas.android.com/tools">
-    <!-- Base application theme. -->
+
     <style name="TheUniverseAroundUs" parent="Theme.MaterialComponents.Light.NoActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/blue</item>
@@ -18,6 +19,7 @@
         <item name="materialButtonStyle">@style/MaterialButtonCustom</item>
         <item name="textInputStyle">@style/TextFieldDefault</item>
         <item name="chipStyle">@style/ChoiceChipStyle</item>
+        <item name="android:forceDarkAllowed">true</item>
     </style>
 
     <style name="TheUniverseAroundUs.OrangeTheme">
@@ -27,7 +29,8 @@
         <!-- Secondary brand color. -->
         <item name="colorSecondary">@color/deep_orange</item>
         <item name="colorSecondaryVariant">@color/dark_deep_orange</item>
-        <item name="colorOnSecondary">@color/white</item>
+        <item name="colorOnSecondary">@color/light_deep_orange</item>
+        <item name="android:forceDarkAllowed">true</item>
         <item name="fontFamily">"casual"</item>
     </style>
 
@@ -38,35 +41,8 @@
         <!-- Secondary brand color. -->
         <item name="colorSecondary">@color/green</item>
         <item name="colorSecondaryVariant">@color/dark_green</item>
-        <item name="colorOnSecondary">@color/white</item>
+        <item name="colorOnSecondary">@color/light_deep_green</item>
+        <item name="android:forceDarkAllowed">true</item>
         <item name="fontFamily">@font/amita</item>
     </style>
-
-    <style name="BottomAppBarCustom" parent="Widget.MaterialComponents.BottomAppBar">
-        <item name="backgroundTint">?attr/colorPrimary</item>
-    </style>
-
-    <style name="MaterialButtonCustom" parent="Widget.MaterialComponents.Button">
-        <item name="backgroundTint">?attr/colorPrimary</item>
-        <item name="android:textAllCaps">false</item>
-        <item name="strokeColor">?attr/colorSecondaryVariant</item>
-        <item name="strokeWidth">@dimen/stroke_width</item>
-        <item name="shapeAppearanceOverlay">@style/MaterialButtonsShapeAppearance</item>
-    </style>
-
-    <style name="MaterialButtonsShapeAppearance">
-        <item name="cornerFamily">rounded</item>
-        <item name="cornerSize">@dimen/material_buttons_corner_size</item>
-    </style>
-
-    <style name="TextFieldDefault" parent="Widget.MaterialComponents.TextInputLayout.OutlinedBox">
-        <item name="boxStrokeColor">?attr/colorPrimary</item>
-        <item name="shapeAppearance">?attr/shapeAppearanceMediumComponent</item>
-    </style>
-
-    <style name="ChoiceChipStyle" parent="Widget.MaterialComponents.Chip.Choice">
-        <item name="chipBackgroundColor">@color/background_chip_state_list</item>
-        <item name="android:textColor">?attr/colorOnPrimary</item>
-    </style>
-
 </resources>
