--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -7,4 +7,6 @@
     <dimen name="default_margin_size">5dp</dimen>
     <dimen name="default_padding_size">10dp</dimen>
     <dimen name="bottom_sheet_description_bottom_padding">70dp</dimen>
+    <dimen name="stroke_width">2dp</dimen>
+    <dimen name="material_buttons_corner_size">10dp</dimen>
 </resources>
