--- a/app/src/main/res/values-v29/themes.xml
+++ b/app/src/main/res/values-v29/themes.xml
@@ -15,6 +15,7 @@
         <!-- Customize your theme here. -->
         <item name="fontFamily">"roboto_mono"</item>
         <item name="bottomAppBarStyle">@style/BottomAppBarCustom</item>
+        <item name="bottomNavigationStyle">@style/BottomNavigationViewCustom</item>
         <item name="android:colorBackground">@color/white</item>
         <item name="materialButtonStyle">@style/MaterialButtonCustom</item>
         <item name="textInputStyle">@style/TextFieldDefault</item>
