--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <dimen name="bottom_sheet_peek_height">70dp</dimen>
+    <dimen name="bottom_sheet_peek_height">10dp</dimen>
     <dimen name="bottom_sheet_line_width">25dp</dimen>
     <dimen name="bottom_sheet_line_height">1dp</dimen>
     <dimen name="bottom_sheet_line_margin_top">5dp</dimen>
@@ -9,4 +9,5 @@
     <dimen name="bottom_sheet_description_bottom_padding">70dp</dimen>
     <dimen name="stroke_width">2dp</dimen>
     <dimen name="material_buttons_corner_size">10dp</dimen>
+    <dimen name="circle_indicator_height">48dp</dimen>
 </resources>
