--- a/app/src/main/res/layout/photo_description_sheet.xml
+++ b/app/src/main/res/layout/photo_description_sheet.xml
@@ -5,21 +5,7 @@
     android:id="@+id/bottom_sheet_layout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/bottom_sheet_color"
-    app:behavior_hideable="true"
-    app:behavior_peekHeight="@dimen/bottom_sheet_peek_height"
-    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">
-
-    <View
-        android:id="@+id/bottom_sheet_line"
-        android:layout_width="@dimen/bottom_sheet_line_width"
-        android:layout_height="@dimen/bottom_sheet_line_height"
-        android:layout_marginTop="@dimen/bottom_sheet_line_margin_top"
-        android:background="@color/black"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
+    android:background="@color/bottom_sheet_color">
     <TextView
         android:id="@+id/bottom_sheet_description_title"
         android:layout_width="wrap_content"
@@ -31,7 +17,7 @@
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/bottom_sheet_line"
+        app:layout_constraintTop_toTopOf="parent"
         tools:text="Two Clusters and a Comet" />
 
     <TextView
