--- a/app/src/main/res/layout/photo_of_the_day_fragment.xml
+++ b/app/src/main/res/layout/photo_of_the_day_fragment.xml
@@ -4,38 +4,60 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_marginTop="@dimen/default_margin_size"
+    android:fitsSystemWindows="true"
+    android:paddingStart="@dimen/default_padding_size"
+    android:paddingEnd="@dimen/default_padding_size"
     tools:context=".ui.photo_of_the_day.PhotoOfTheDayFragment">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/photo_of_the_day_layout"
+    <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginTop="@dimen/default_margin_size"
-        android:paddingStart="@dimen/default_padding_size"
-        android:paddingEnd="@dimen/default_padding_size">
+        android:layout_height="wrap_content"
+        android:background="@color/white"
+        android:fitsSystemWindows="false">
 
-        <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/search_in_wiki_layout"
+        <androidx.constraintlayout.motion.widget.MotionLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="@string/search_wiki"
-            app:counterEnabled="true"
-            app:counterMaxLength="20"
-            app:endIconCheckable="true"
-            app:endIconDrawable="@drawable/ic_wikipedia"
-            app:endIconMode="custom"
-            app:helperText="@string/wiki_helper_text"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0">
+            app:layoutDescription="@xml/photo_of_the_day_fragment_scene"
+            app:layout_scrollFlags="scroll|snap">
 
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/search_in_wiki_edit_text"
-                android:layout_width="match_parent"
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/search_in_wiki_layout"
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:inputType="text" />
-        </com.google.android.material.textfield.TextInputLayout>
+                android:background="@color/bottom_sheet_color"
+                android:hint="@string/search_wiki"
+                app:counterEnabled="true"
+                app:counterMaxLength="20"
+                app:endIconCheckable="true"
+                app:endIconDrawable="@drawable/ic_wikipedia"
+                app:endIconMode="custom"
+                app:helperText="@string/wiki_helper_text"
+                app:layout_constraintBottom_toTopOf="@+id/get_wiki_search_button"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/search_in_wiki_edit_text"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:inputType="text" />
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <androidx.appcompat.widget.AppCompatImageView
+                android:id="@+id/get_wiki_search_button"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:background="@color/bottom_sheet_color"
+                app:layout_constraintBottom_toBottomOf="@id/search_in_wiki_layout"
+                app:layout_constraintEnd_toStartOf="@id/search_in_wiki_layout"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="@id/search_in_wiki_layout"
+                app:srcCompat="@drawable/ic_search" />
+        </androidx.constraintlayout.motion.widget.MotionLayout>
 
         <com.google.android.material.chip.ChipGroup
             android:id="@+id/chose_photo_chip_group"
@@ -43,9 +65,8 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             app:checkedChip="@id/today_chip"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/search_in_wiki_layout"
+            app:layout_collapseMode="parallax"
+            app:layout_scrollFlags="scroll|exitUntilCollapsed"
             app:selectionRequired="true"
             app:singleLine="true"
             app:singleSelection="true">
@@ -66,38 +87,46 @@
                 android:layout_height="wrap_content" />
         </com.google.android.material.chip.ChipGroup>
 
-        <androidx.core.widget.NestedScrollView
-            android:id="@+id/photo_of_the_day_image_view_scroll"
+
+        <androidx.fragment.app.FragmentContainerView
+            android:id="@+id/image_or_video_fragment"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+    </com.google.android.material.appbar.AppBarLayout>
+
+
+    <androidx.core.widget.NestedScrollView
+        android:id="@+id/photo_of_the_day_image_view_scroll"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:scrollbars="vertical"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/chose_photo_chip_group"
+        app:layout_constraintVertical_bias="0.4">
+
+        <FrameLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:scrollbars="vertical"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
+            android:orientation="vertical">
 
-            <androidx.fragment.app.FragmentContainerView
-                android:id="@+id/image_or_video_fragment"
+            <include
+                android:id="@+id/included_bottom_sheet_layout"
+                layout="@layout/photo_description_sheet"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
-        </androidx.core.widget.NestedScrollView>
+                android:layout_height="wrap_content"
+                android:layout_gravity="top" />
 
-        <include
-            android:id="@+id/included_loading_layout"
-            layout="@layout/loading_layout"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:visibility="gone"
-            app:layout_constraintBottom_toBottomOf="@id/photo_of_the_day_image_view_scroll"
-            app:layout_constraintEnd_toEndOf="@id/photo_of_the_day_image_view_scroll"
-            app:layout_constraintStart_toStartOf="@id/photo_of_the_day_image_view_scroll"
-            app:layout_constraintTop_toTopOf="@id/photo_of_the_day_image_view_scroll" />
-    </androidx.constraintlayout.widget.ConstraintLayout>
-
-    <include
-        android:id="@+id/included_bottom_sheet_layout"
-        layout="@layout/bottom_sheet_layout" />
-
+            <include
+                android:id="@+id/included_loading_layout"
+                layout="@layout/loading_layout"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_gravity="top|center"
+                android:visibility="gone" />
+        </FrameLayout>
+    </androidx.core.widget.NestedScrollView>
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
