--- a/app/src/main/res/layout/photos_of_the_universe_item_fragment.xml
+++ b/app/src/main/res/layout/photos_of_the_universe_item_fragment.xml
@@ -2,6 +2,7 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/photo_of_universe_item_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ui.photos_of_the_universe.item_fragment.PhotosOfTheUniverseItemFragment">
