--- a/app/src/main/res/xml/photo_of_the_day_fragment_scene.xml
+++ b/app/src/main/res/xml/photo_of_the_day_fragment_scene.xml
@@ -6,10 +6,7 @@
         motion:constraintSetStart="@+id/start"
         motion:duration="500"
         motion:motionInterpolator="linear">
-        <OnSwipe
-            motion:dragDirection="dragRight"
-            motion:touchAnchorId="@id/get_wiki_search_button"
-            motion:touchAnchorSide="right" />
+        <OnClick motion:targetId="@id/get_wiki_search_button" />
     </Transition>
 
     <ConstraintSet android:id="@+id/end">
@@ -25,6 +22,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             motion:layout_constraintBottom_toBottomOf="parent"
+            android:visibility="gone"
             motion:layout_constraintStart_toEndOf="parent"
             motion:layout_constraintTop_toTopOf="parent" />
     </ConstraintSet>
